# gitui

./: .clippy.toml  .editorconfig  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  KEY_CONFIG.md  LICENSE.md  Makefile  README.md  THEMES.md  build.rs  deny.toml  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
asyncgit/: Cargo.toml
asyncgit/src/: error.rs  lib.rs
asyncgit/src/sync/: commit.rs  commit_details.rs  commit_filter.rs  commits_info.rs  config.rs  hooks.rs  logwalker.rs  mod.rs  patches.rs  repository.rs  sign.rs  stash.rs  utils.rs
asyncgit/src/sync/branch/: mod.rs
asyncgit/src/sync/remotes/: mod.rs  push.rs
asyncgit/src/sync/staging/: discard_tracked.rs  mod.rs  stage_tracked.rs
filetreelist/: Cargo.toml
filetreelist/src/: error.rs  filetree.rs  filetreeitems.rs  item.rs  treeitems_iter.rs
git2-hooks/: Cargo.toml
git2-hooks/src/: hookspath.rs  lib.rs
git2-testing/: Cargo.toml
invalidstring/: Cargo.toml
scopetime/: Cargo.toml
src/: app.rs  args.rs  clipboard.rs  input.rs  main.rs  options.rs  queue.rs
src/components/: changes.rs  commitlist.rs  mod.rs  revision_files.rs  textinput.rs
src/components/commit_details/: compare_details.rs  details.rs
src/components/utils/: emoji.rs  filetree.rs  logitems.rs  statustree.rs
src/keys/: key_config.rs
src/popups/: blame_file.rs  commit.rs  create_remote.rs  file_revlog.rs  msg.rs  options.rs
src/tabs/: mod.rs  revlog.rs  stashing.rs  stashlist.rs  status.rs
src/ui/: scrollbar.rs  style.rs  syntax_text.rs
wix/: main.wxs
